--- a/src/Style/myJumbotron.css
+++ b/src/Style/myJumbotron.css
@@ -7,7 +7,7 @@
 }
 
 #jumbotron div:nth-child(2) {
-  height: 30vh;
+  height: 45vh;
   position: relative;
 }
 
