--- a/src/Style/shopNow.css
+++ b/src/Style/shopNow.css
@@ -5,25 +5,15 @@
   left: 0;
   right: 0;
   text-align: center;
-  bottom: -524px;
+  bottom: -630px;
 }
 
 #shop-now img {
   width: 421.5px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .bg-shop {
-    width: 688px;
-    height: 344px;
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  .bg-shop {
-    width: 864px;
-    height: 432px;
-  }
+.bg-shop {
+  max-width: 1225px;
 }
 
 #shop-now button {
